--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@emotion/react": "^11.4.1",
     "@emotion/styled": "^11.3.0",
     "@fontsource/roboto": "^4.5.0",
+    "@fontsource/source-serif-pro": "^4.5.0",
     "@types/color": "^3.0.2",
     "@types/isomorphic-fetch": "^0.0.35",
     "@types/raf": "^3.4.0",
@@ -45,12 +46,9 @@
     "web3modal": "^1.9.4"
   },
   "devDependencies": {
-    "@types/react": "17.0.14",
-    "eslint": "7.31.0",
-    "eslint-config-next": "11.0.1",
-    "typescript": "4.3.5",
-    "vercel": "^23.1.2",
+    "@ethersproject/contracts": "^5.4.1",
     "@nomiclabs/hardhat-ethers": "^2.0.2",
+    "@nomiclabs/hardhat-etherscan": "^2.1.6",
     "@nomiclabs/hardhat-waffle": "^2.0.1",
     "@openzeppelin/contracts": "^4.2.0",
     "@typechain/ethers-v5": "^7.0.1",
@@ -58,13 +56,16 @@
     "@types/chai": "^4.2.21",
     "@types/mocha": "^9.0.0",
     "@types/node": "^16.7.4",
+    "@types/react": "17.0.14",
+    "abi-decoder": "^2.4.0",
     "chai": "^4.3.4",
+    "eslint": "7.31.0",
+    "eslint-config-next": "11.0.1",
     "ethereum-waffle": "^3.4.0",
     "hardhat": "^2.6.1",
     "ts-node": "^10.2.1",
     "typechain": "^5.1.2",
-    "@ethersproject/contracts": "^5.4.1",
-    "@nomiclabs/hardhat-etherscan": "^2.1.6",
-    "abi-decoder": "^2.4.0"
+    "typescript": "4.3.5",
+    "vercel": "^23.1.2"
   }
 }
