--- a/.envrc.example
+++ b/.envrc.example
@@ -1,4 +1,4 @@
 export HARDHAT_MNEMONIC=""
-export INFURA_PROJECT_ID=""
 export ETHERSCAN_API_KEY=""
+export NEXT_PUBLIC_INFURA_PROJECT_ID=""
 export NEXT_PUBLIC_ETH_NETWORK="localhost"
