--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@fontsource/source-serif-pro": "^4.5.0",
     "@types/color": "^3.0.2",
     "@types/isomorphic-fetch": "^0.0.35",
+    "@types/prompt": "^1.1.1",
     "@types/raf": "^3.4.0",
     "@types/react-color": "^3.0.5",
     "@walletconnect/web3-provider": "^1.6.5",
@@ -36,6 +37,7 @@
     "graphql-request": "^3.5.0",
     "isomorphic-fetch": "^3.0.0",
     "next": "11.1.1",
+    "prompt": "^1.2.0",
     "puppeteer-core": "^10.2.0",
     "raf": "^3.4.1",
     "react": "17.0.2",
