--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "framer-motion": "^4.1.17",
     "graphql": "^15.5.2",
     "graphql-request": "^3.5.0",
+    "hardhat-preprocessor": "^0.1.4",
     "isomorphic-fetch": "^3.0.0",
     "next": "11.1.1",
     "prompt": "^1.2.0",
