--- a/.envrc.example
+++ b/.envrc.example
@@ -2,3 +2,4 @@ export HARDHAT_MNEMONIC=""
 export ETHERSCAN_API_KEY=""
 export NEXT_PUBLIC_INFURA_PROJECT_ID=""
 export NEXT_PUBLIC_ETH_NETWORK="localhost"
+export NEXT_PUBLIC_ALCHEMY_PROJECT_ID=""
